--- a/test_site/index.html
+++ b/test_site/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello world!</h1>
-    <h2>This is a test site.</h2>
+    <h2>This is a test site for newbies in HTML.</h2>
 </body>
 </html>
